<resources>
    <string name="app_name">StoreToDoor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Foods</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="biryani">Biryani</string>
    <string name="food_list_items">Food list items</string>
    <string name="mains">Mains</string>
    <string name="categories">Categories</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="_9876543210">9876543210</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="_91">+91</string>
    <string name="_60">60</string>
    <string name="waiting_for_otp_to_arrive">Waiting for OTP ~</string>
    <string name="automatic_verification_unsuccessful_n_please_try_manually">Automatic verification unsuccessful,please try manually</string>
    <string name="validate">Validate</string>
    <string name="display_name">Display Name</string>
    <string name="update_info">Save Profile</string>
    <string name="current_location">Current Delivery Location</string>
    <string name="no_address_found">No address found</string>
    <string name="special_combos">Special Combos</string>
    <string name="sample_desc">Biryani is a mixed rice dish, made with Indian spices, rice, and meat.</string>
    <string name="add">ADD</string>
    <string name="store_to_door">Store To Door</string>
    <string name="_60_rs">₹ 60</string>
    <string name="alu_biryani">Alu Biryani</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="delete">Delete</string>
    <string name="subtotal_x_items_575_00">Total (x items) : ₹ 575.00/-</string>
    <string name="order_now">Order now</string>
    <string name="from_store_to_door">from : Store To Door</string>
    <string name="_80_per_item">₹80 per item</string>
    <string name="special_item">Special Item</string>
    <string name="order_timing_10am_to_5pm">Order Timing : 10am to 5pm</string>
    <string name="order_0">Order #0</string>
    <string name="_1580">₹ 1580</string>
    <string name="ordered_on_16th_jan_2021_18_35_21">Ordered on 16th Jan, 2021 18:35:21</string>
    <string name="receipt">Receipt</string>
    <string name="expand_description">expand description</string>
    <string name="ordered_state">Ordered</string>
    <string name="accepted_state">Accepted</string>
    <string name="postponed_state">Postponed</string>
    <string name="rejected_state">Rejected</string>
    <string name="delivered_state">Delivered</string>
    <string name="status">Status</string>
    <string name="address_132_anytime_lane_kol_711401">Delivery Address : 132, Anytime Lane Kol-711401, Delivery Address : 132, Anytime Lane Kol-711401  Delivery Address : 132, Anytime Lane Kol-711401 </string>
    <string name="unknown_name">Unknown Name</string>
    <string name="_911234567890">+911234567890</string>
    <string name="call">call</string>
    <string name="order_notifications">Order Notifications</string>
    <string name="management">Admin</string>
    <string name="foods">Foods</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_list">Store / Price List</string>
    <string name="min_quantity">Min Quantity :</string>
    <string name="_10">--</string>
    <string name="single_orderable">Single Orderable</string>
    <string name="save">Save</string>
    <string name="_plus">+</string>
    <string name="_22">--</string>
    <string name="offers">Offers</string>
    <string name="food_name">Food Name</string>
    <string name="food_description">Food Description</string>
    <string name="item_id_entry">Item ID Entry</string>
    <string name="generate">Gen</string>
    <string name="data_security">Data Security</string>
    <string name="save_time">Save Time</string>
    <string name="currently_active_orders">Currently Active Orders</string>
    <string name="search_by_user">Search By User</string>
    <string name="ordered">ORDERED</string>
    <string name="accepted">ACCEPTED</string>
    <string name="rejected">REJECTED</string>
    <string name="postponed">POSTPONED</string>
    <string name="delivered">DELIVERED</string>
    <string name="delivery_charge_50_00">Delivery Charge : ₹ 50.00/-</string>
    <string name="landmark">Landmark</string>
    <string name="change_delivery_address">Change Delivery Address</string>
    <string name="cash_on">Cash On Delivery</string>
    <string name="g_pay">G-Pay</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send_inr_xxxx_xx_to_this_account_n_order_will_be_accepted_after_payment">Send ₹ XXXX.XX to this account\n Order will be accepted after payment</string>
    <string name="confirm">Confirm</string>
    <string name="order_id">Order ID</string>
    <string name="phone_id">Phone ID</string>
    <string name="upload">Upload</string>
    <string name="offer_description_image">offer description image</string>
    <string-array name="admin_type_order_list_spinner">
        <item>ORDERED</item>
        <item>ACCEPTED</item>
        <item>REJECTED</item>
        <item>POSTPONED</item>
        <item>DELIVERED</item>
    </string-array>

    <string name="leku_app_name" translatable="false">Leku</string>
    <string name="leku_title_activity_location_picker">Location Picker</string>
    <string name="leku_no_geocoder_available">Service not available</string>
    <string name="leku_load_location_error">Something went wrong. Please try again.</string>
    <string name="leku_no_search_results">There are no results for your search</string>
    <string name="leku_network_resource">network</string>
    <string name="leku_unknown_location">unknown location</string>
    <string name="leku_voice_search_promp">Search by voice…</string>
    <string name="leku_voice_search_extra_language">en-EN</string>
    <string name="leku_toolbar_action_voice_title">Voice</string>
    <string name="leku_search_hint">Search</string>
    <string name="leku_longitude">Longitude</string>
    <string name="leku_latitude">Latitude</string>
    <string name="leku_coordinates">Coordinates</string>
    <string name="leku_use_this_location">Use this location</string>
    <string name="leku_accessibility_remove_current_location">Remove current location</string>
    <string name="sync_admin_key">Sync Admin Key</string>
    <string name="search">Search</string>
    <string name="cancel_search">Cancel search</string>
    <string name="search_for_specific_food">Search For Specific Food</string>
    <string name="log_out">Log out</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="loading_your_favourites">Loading your favourites!</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="min_text_charge"><![CDATA[Order doesn\'t qualify for delivery (Min ₹50 order for <2km & min ₹100 order for >2km delivery)]]></string>
    <string name="delivery_on_16th_jan_2021_18_35_21">Delivery on 16th Jan, 2021 18:35:21</string>
    <string name="reload">reload</string>
    <string name="checking_for_available_offers">Checking for available offers</string>
    <string name="current_offers_available_none">Current Offers Available : None</string>
    <string name="set_offer">Set Offer</string>
    <string name="offer_name">Offer Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End time</string>
    <string name="example_time">No time selected</string>
    <string name="sample_offer_name">Sample offer name</string>
    <string name="offer_amount">Offer Amount (without %)</string>
    <string name="foods_in_offer">Foods In Offer</string>
    <string name="no_foods">No foods</string>
    <string name="change_time">Change Time</string>
    <string name="change_food">Add Food</string>
    <string name="sample_offer_amount">Sample offer amount</string>
    <string name="launch_mode">Toggle Launch Mode</string>
    <string name="_1">1</string>
    <string name="nothing_nhere">Nothing\nhere!</string>
    <string name="order_some_maybe">( Order Some Maybe? )</string>
    <string name="your_photo">Your Photo</string>
    <string name="joined">Joined</string>
    <string name="_6mon_ago">6mon ago.</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="payment_method">Payment Method</string>
    <string name="order_info">Order Info</string>
    <string name="subtotal">Subtotal</string>
    <string name="_500_00">₹500.00/</string>
    <string name="offers_applied">Offers Applied</string>
    <string name="_50_00">-₹50.00/</string>
    <string name="p_50_00">+₹50.00/</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="total">Total</string>
    <string name="checkout_500">Checkout ₹500</string>
    <string name="this_category_is_out_of_stock">This category is out of stock!</string>
</resources>