<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.exploitr.storetodoor.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="app.exploitr.storetodoor.ui.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="app.exploitr.storetodoor.ui.fragments.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

 <!--   <fragment
        android:id="@+id/nav_search"
        android:name="app.exploitr.storetodoor.ui.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" /> -->

    <activity
        android:id="@+id/nav_management"
        android:name="app.exploitr.std_management.ui.Management"
        android:label="@string/management"
        tools:layout="@layout/activity_management" />

    <activity
        android:id="@+id/nav_cart"
        android:name="app.exploitr.storetodoor.ui.activities.others.CartActivity"
        android:label="@string/cart"
        tools:layout="@layout/activity_cart" />

</navigation>