<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/select_offer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:padding="16dp"
            android:src="@drawable/ic_delete"
            android:tint="@color/primary" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/proxima_asi"
        android:text="@string/offer_name"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/offer_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/sample_offer_name"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/proxima_asi"
        android:text="@string/start_time"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/offer_start_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/example_time" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/proxima_asi"
        android:text="@string/end_time"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/offer_expiry_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/example_time" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/proxima_asi"
        android:text="@string/offer_amount"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/offer_amount_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/sample_offer_amount"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/proxima_asi"
        android:text="@string/foods_in_offer"
        android:textSize="16sp" />

    <co.lujun.androidtagview.TagContainerLayout
        android:id="@+id/offer_food_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:container_enable_drag="false"
        app:horizontal_interval="10dp"
        app:tag_background_color="#3300ffdd"
        app:tag_clickable="true"
        app:tag_theme="pure_teal"
        app:vertical_interval="10dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_time_in_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/change_time" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_foods_in_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/change_food" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_offer_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/save" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>