<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_back"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sync_admin_key"
        android:icon="@drawable/ic_key_sync"
        android:orderInCategory="99"
        android:title="@string/sync_admin_key"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_change_launch_mode"
        android:icon="@drawable/ic_launch_mode"
        android:orderInCategory="98"
        android:title="@string/launch_mode"
        app:showAsAction="always" />
</menu>