<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.others.CartActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:nestedScrollingEnabled="true" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/proxima_asi"
            android:text="@string/delivery_location"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/order_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_location_cart"
            android:drawableEnd="@drawable/ic_right"
            android:drawablePadding="8dp"
            android:gravity="start|center"
            android:text="@string/address_132_anytime_lane_kol_711401"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:drawableTint="@color/purple_700" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/proxima_asi"
            android:text="@string/payment_method"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/payment_mode_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:drawableStart="@drawable/ic_cash_on_main"
            android:drawableEnd="@drawable/ic_right"
            android:drawablePadding="20dp"
            android:fontFamily="@font/proxima_asi"
            android:gravity="center|start"
            android:text="@string/cash_on"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/proxima_asi"
            android:text="@string/order_info"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/proxima_asi"
                android:text="@string/subtotal"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subtotal_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_asi"
                android:letterSpacing="0.25"
                android:text="@string/_500_00"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/proxima_asi"
                android:text="@string/offers_applied"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/offers_applied_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_asi"
                android:letterSpacing="0.25"
                android:text="@string/_50_00"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/proxima_asi"
                android:text="@string/shipping_cost"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/shipping_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_asi"
                android:letterSpacing="0.25"
                android:text="@string/p_50_00"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/proxima_asi"
                android:text="@string/total"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_price_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_asi"
                android:letterSpacing="0.25"
                android:text="@string/_500_00"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/order_qual_text"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_not_qual"
            android:drawablePadding="4dp"
            android:fontFamily="@font/proxima_asi"
            android:gravity="center|start"
            android:text="@string/min_text_charge"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:drawableTint="@color/purple_700" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/order_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/checkout_btn_back"
            android:fontFamily="@font/proxima_asi"
            android:minHeight="48dp"
            android:text="@string/checkout_500"
            app:backgroundTint="@color/purple_700" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>